20180920
# C-

#include <stdio.h>
#include <stdlib.h>
int main(void)
{
   printf("Hello 恩師\n");   	/* 印出Hello C! 字串 */
   printf("Hello 恩師!\n");   /* 印出Hello World! 字串 */   
   
   system("pause");
   return 0;
}



  File "cc.py", line 5
    for j in range(1,5):
      ^
IndentationError: expected an indented block
